# uni

./: .gitignore  LICENSE  README.md
2 semester/: Лаба 3.cpp  Лаба 4.cpp
2 semester/BinaryTrees/:  main.cpp
2 semester/NeuralNetwork/: Files.cpp
2 semester/Red-Black tree/: main.cpp
3 semester/AlgorithmsLab2/: Benchmarks.h  RabinKarp.cpp  RabinKarp.h  main.cpp
3 semester/DBO Lab1/: main.cpp
3 semester/OOOP Lab1/: AdjListGraph.h  CMakeLists.txt  Data.h  Errors.cpp  Errors.h  Graph.h  MatrixGraph.h  UNIT_TESTS.cpp  main.cpp  readme.md
3 semester/OOOP Lab1/Source/: AdjListGraph.h  Data.h  DateTime.cpp  DateTime.h  DateTimeConstants.h  Errors.cpp  Errors.h  Graph.h  MatrixGraph.h  STime.cpp  STime.h
3 semester/OOOP Lab1/Source/Cpp/: AdjListGraphTesting.cpp  DateTime.cpp  DateTimeTesting.cpp  Errors.cpp  MatrixGraphTesting.cpp  STime.cpp
3 semester/OOOP Lab1/Source/Cpp/UNIT TESTS/: DateTimeTesting.cpp  MatrixGraphTesting.cpp
3 semester/OOOP Lab1/Source/Headers/: AdjListGraph.h  Data.h  DateTime.h  Graph.h  MatrixGraph.h  STime.h  doctest.h
3 semester/OOOPLab2/: OOOPLab2.pro  addalarmsmenu.cpp  addalarmsmenu.h  addalarmsmenu.ui  addmenu.cpp  addmenu.h  addmenu.ui  addtimersmenu.cpp  addtimersmenu.h  addtimersmenu.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  timer.cpp  timer.h  timercollection.cpp  timercollection.h  timerinfo.cpp  timerinfo.h
3 semester/build-OOOPLab2-Desktop_arm_darwin_generic_mach_o_64bit-Debug/: .qmake.stash  Makefile  moc_addalarmsmenu.cpp  moc_addmenu.cpp  moc_addtimersmenu.cpp  moc_mainwindow.cpp  moc_timer.cpp  moc_timercollection.cpp  qrc_resource.cpp  ui_addalarmsmenu.h  ui_addmenu.h  ui_addtimersmenu.h  ui_mainwindow.h
5 semester/MOZI/: 2.py  3.py  decrypted.txt  encrypted.txt
5 semester/NN/: homework.ipynb
Lab1/OOOP Lab1/: main.cpp
planarityTesting/: Graph.cpp  Graph.h
semester1/IntroductionToUniversityStudies/: test.docx
semester3/DBO/lab1/: CMakeLists.txt
semester3/DBO/lab1/Headers/: Movies.h
semester3/DBO/lab1/Sources/: Menu.cpp
semester3/OOOP Lab1/: main.cpp
semester6/Compilers/compilers_labs-main/lab2/dragon-tiger/: .gitignore  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
semester6/Compilers/compilers_labs-main/lab2/dragon-tiger/src/: Makefile.am  Makefile.in
semester6/Compilers/compilers_labs-main/lab2/dragon-tiger/src/ast/: Makefile.am  Makefile.in  ast_dumper.cc  ast_dumper.hh  evaluators.hh  nodes.hh
semester6/Compilers/compilers_labs-main/lab2/dragon-tiger/src/driver/: Makefile.am  Makefile.in  driver.cc
semester6/Compilers/compilers_labs-main/lab2/dragon-tiger/src/parser/: Makefile.am  Makefile.in  parser_driver.cc  parser_driver.hh  tiger_lexer.ll  tiger_parser.yy
semester6/Compilers/compilers_labs-main/lab2/dragon-tiger/src/utils/: Makefile.am  Makefile.in  errors.cc  errors.hh  nolocation.cc  nolocation.hh  symbols.cc  symbols.hh
(+1471 files in other folders)
